@@ -51,10 +51,7 @@ options.c: options.pl ../options.dat ../../perl/Fuse.pm ../../perl/Fuse/Dialog.p
 options.h: options-header.pl ../options.dat ../../perl/Fuse.pm ../../perl/Fuse/Dialog.pm
 	@PERL@ options-header.pl ../options.dat > options.h
 
-noinst_HEADERS = gtkdisplay.h \
-	         gtkkeyboard.h \
-		 gtkinternals.h \
-		 gtkui.h \
+noinst_HEADERS = gtkinternals.h \
 		 options.h \
 		 options.pl \
 		 options-header.pl
