@@ -28,8 +28,54 @@
 #define FUSE_GTKINTERNALS_H
 
 #include <gtk/gtk.h>
+#include <libspectrum.h>
+
+/*
+ * Display routines (gtkdisplay.c)
+ */
+
+/* The colour palette in use */
+extern libspectrum_dword gtkdisplay_colours[ 16 ];
+
+int gtkdisplay_init( void );
+int gtkdisplay_end( void );
+
+/*
+ * Keyboard routines (gtkkeyboard.c)
+ */
+
+int gtkkeyboard_keypress( GtkWidget *widget, GdkEvent *event,
+			  gpointer data);
+int gtkkeyboard_keyrelease( GtkWidget *widget, GdkEvent *event,
+			    gpointer data);
+int gtkkeyboard_release_all( GtkWidget *widget, GdkEvent *event,
+			     gpointer data );
+
+/*
+ * Statusbar routines (statusbar.c)
+ */
 
 /* Is the tape running? */
 extern GtkWidget *gtkstatusbar_tape;
+
+/*
+ * General user interface routines (gtkui.c)
+ */
+
+extern GtkWidget *gtkui_window;
+extern GtkWidget *gtkui_drawing_area;
+
+void gtkui_destroy_widget_and_quit( GtkWidget *widget, gpointer data );
+char* gtkui_fileselector_get_filename( const char *title );
+
+void gtkui_load_binary_data( GtkWidget *widget, gpointer data );
+void gtkui_save_binary_data( GtkWidget *widget, gpointer data );
+int gtkui_confirm( const char *string );
+void gtk_tape_browse( GtkWidget *widget, gpointer data );
+void gtkui_roms( GtkWidget *widget, gpointer data );
+
+int gtkui_picture( const char *filename, int border );
+
+extern void gtkui_popup_menu(void);
 
 #endif				/* #ifndef FUSE_GTKINTERNALS_H */
