@@ -44,10 +44,7 @@
 #include "display.h"
 #include "event.h"
 #include "fuse.h"
-#include "gtkdisplay.h"
-#include "gtkkeyboard.h"
 #include "gtkinternals.h"
-#include "gtkui.h"
 #include "machine.h"
 #include "options.h"
 #include "psg.h"
